--- a/helm-chart/templates/deployment.yaml
+++ b/helm-chart/templates/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: {{ .Values.mfcomposite.mf_name }}
-          image: "{{ .Values.image.repository }}mfcomposite:{{ .Values.image.version }}"
+          image: "{{ .Values.image.repository }}mfcomposite:{{ .Values.mfframework.imageversion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}      
           tty: true
           env:
