--- a/helm-chart/values_base.yaml
+++ b/helm-chart/values_base.yaml
@@ -20,5 +20,8 @@ mfrabbitmq:
   port: 5672
   adminport: 15672
   adminserviename: mfrabbitmqadmin
+mfinstruments:
+  mf_http_port: 7001
+  mf_name: mfinstruments
 pv:
   localstorage: /opt/mf
