--- a/helm-chart/templates/mfinstrument_deployment.yaml
+++ b/helm-chart/templates/mfinstrument_deployment.yaml
@@ -14,11 +14,11 @@ spec:
     spec:
       containers:
         - name: {{ .Values.mfinstruments.mf_name }}
-          image: "{{ .Values.image.repository }}mfinstruments:{{ .Values.mfframework.imageversion }}"
+          image: "{{ .Values.image.repository }}mfinstruments:{{ .Values.mfinstruments.imageversion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           tty: true
           env:
             - name: "SPRING_PROFILES_ACTIVE"
               value: "k8n"
             - name: "api.common.version"
-              value: "{{ .Values.mfframework.imageversion }}"
+              value: "{{ .Values.mfinstruments.imageversion }}"
