--- a/helm-chart/versions/versions_prod.yaml
+++ b/helm-chart/versions/versions_prod.yaml
@@ -1,2 +1,8 @@
+mfrabbitmq:
+  image: rabbitmq:3.10.5-management
+mfmongo:
+  image: mongo:5.0
 mfframework:
-  imageversion: 0.21.0-alpha.80271e463f9ef5f9b990dd5f73d0b3a6266fb684
+  imageversion: 6293cb569dbd43fee43672b8a8b9ce1c5bde698d
+mfinstruments:
+  imageversion: 1.0.0
