--- a/helm-chart/versions/versions_dev.yaml
+++ b/helm-chart/versions/versions_dev.yaml
@@ -3,7 +3,6 @@ mfrabbitmq:
 mfmongo:
   image: mongo:5.0
 mfframework:
-  imageversion: 6293cb569dbd43fee43672b8a8b9ce1c5bde698d
+  imageversion: 0.21.0-alpha.6ffd4cd0943d5084feca68351472317ce9fe8b92
 mfinstruments:
   imageversion: 1.0.0
-
