updated helm cart with Image Version '0.21.0-alpha.6d45e12173b17372447912705e034612a73eb106' for mfinstruments

--- a/helm-chart/versions/versions_dev.yaml
+++ b/helm-chart/versions/versions_dev.yaml
@@ -5,4 +5,4 @@ mfmongo:
 mfframework:
   imageversion: 0.21.0-alpha.6ffd4cd0943d5084feca68351472317ce9fe8b92
 mfinstruments:
-  imageversion: 999acf859ce80522800f6bae8251fa9f47956908
+  imageversion: 0.21.0-alpha.6d45e12173b17372447912705e034612a73eb106
