--- a/helm-chart/versions/versions_dev.yaml
+++ b/helm-chart/versions/versions_dev.yaml
@@ -6,3 +6,7 @@ mfframework:
   imageversion: 0.21.0-alpha.6ffd4cd0943d5084feca68351472317ce9fe8b92
 mfinstruments:
   imageversion: 0.21.0-alpha.6d45e12173b17372447912705e034612a73eb106
+mftransactions:
+  imageversion: 1.0.0
+mfvaluation:
+  imageversion: 1.0.0
