--- a/helm-chart/env/values_dev.yaml
+++ b/helm-chart/env/values_dev.yaml
@@ -12,3 +12,7 @@ mfrabbitmq:
   adminport_ext: 30022
 mfinstruments:
   mf_http_port_ext: 30024
+mftransactions:
+  mf_http_port_ext: 30026
+mfvaluation:
+  mf_http_port_ext: 30025
