--- a/helm-chart/env/values_prod.yaml
+++ b/helm-chart/env/values_prod.yaml
@@ -11,3 +11,7 @@ mfrabbitmq:
   adminport_ext: 30032
 mfinstruments:
   mf_http_port_ext: 30034
+mftransactions:
+  mf_http_port_ext: 30036
+mfvaluation:
+  mf_http_port_ext: 30035
