--- a/helm-chart/versions/versions_dev.yaml
+++ b/helm-chart/versions/versions_dev.yaml
@@ -9,4 +9,4 @@ mfinstruments:
 mftransactions:
   imageversion: 1.0.0
 mfvaluation:
-  imageversion: 1.0.0
+  imageversion: c1284e19709b36a9740f5d8685e12e1daa9d3b96
