change mongo host

--- a/helm-chart/templates/mfinstrument_deployment.yaml
+++ b/helm-chart/templates/mfinstrument_deployment.yaml
@@ -18,7 +18,9 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           tty: true
           env:
-            - name: "SPRING_PROFILES_ACTIVE"
-              value: "k8n"
+            - name: "spring.data.mongodb.host"
+              value: "{{ .Values.k8_ip }}"
+            - name: "spring.data.mongodb.port"
+              value: "{{ .Values.mfmongo.db_port_ext }}"
             - name: "api.common.version"
               value: "{{ .Values.mfinstruments.imageversion }}"
