--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -5,7 +5,7 @@ mfmongo:
 mfframework:
   imageversion: 0.21.0-alpha.783f3edf79ec9b0793d1ee88df91b58c873282b3
 mfinstruments:
-  imageversion: 0
+  imageversion: 0.21.0-alpha.e032520773a669c6f4d79214f34426447e943a9f
 mftransactions:
   imageversion: 0
 mfvaluation:
