--- a/helm-chart/env/values_prod.yaml
+++ b/helm-chart/env/values_prod.yaml
@@ -1,17 +1,19 @@
 stage: prod
-mfcomposite:
-  mf_http_port_ext: 30048
-mfmongo:
-  db_pw: vulkan
-  db_port_ext: 30049
 mfrabbitmq:
   user: user
   pw: vulkan
   port_ext: 30041
   adminport_ext: 30042
+mfmongo:
+  db_pw: vulkan
+  db_port_ext: 30043
 mfinstruments:
   mf_http_port_ext: 30044
 mftransactions:
+  mf_http_port_ext: 30045
+mfmarketdata:
   mf_http_port_ext: 30046
 mfvaluation:
-  mf_http_port_ext: 30045
+  mf_http_port_ext: 30047
+mfcomposite:
+  mf_http_port_ext: 30049
