--- a/helm-chart/env/values_test.yaml
+++ b/helm-chart/env/values_test.yaml
@@ -1,18 +1,20 @@
 stage: test
-mfcomposite:
-  mf_http_port_ext: 30038
-mfmongo:
-  db_pw: vulkan
-  db_port_ext: 30039
 mfrabbitmq:
   user: user
   pw: vulkan
   port_ext: 30031
   adminname: mfrabbitmqadmin
   adminport_ext: 30032
+mfmongo:
+  db_pw: vulkan
+  db_port_ext: 30033
 mfinstruments:
   mf_http_port_ext: 30034
 mftransactions:
+  mf_http_port_ext: 30035
+mfmarketdata:
   mf_http_port_ext: 30036
 mfvaluation:
-  mf_http_port_ext: 30035
+  mf_http_port_ext: 30037
+mfcomposite:
+  mf_http_port_ext: 30039
