--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -11,4 +11,4 @@ mftransactions:
 mfvaluation:
   imageversion: 0.21.0-alpha.87cf72e2018aca245897886a6e2575bd7d819ff5
 mfmarketdata:
-  imageversion: 7f6324c915649db0c6f406915e0b5d7781c775fb
+  imageversion: 0.22.0-alpha.7f7894709c7756e5fefd488f6b3849ccc1a1a0ef
