get all ports from values file and not from so app config

--- a/helm-chart/templates/composite_deployment.yaml
+++ b/helm-chart/templates/composite_deployment.yaml
@@ -18,7 +18,23 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}      
           tty: true
           env:
-            - name: "SPRING_PROFILES_ACTIVE"
-              value: "k8n"
             - name: "api.common.version"
               value: "{{ .Values.mfframework.imageversion }}"
+            - name: "server.port"
+              value: "{{ .Values.mfcomposite.mf_http_port }}"
+            - name: "api.mfinstruments.host"
+              value: "{{ .Values.mfinstruments.mf_name }}"
+            - name: "api.mfinstruments.port"
+              value: "{{ .Values.mfinstruments.mf_http_port_ext }}"
+            - name: "api.mftransactions.host"
+              value: "{{ .Values.mftransactions.mf_name }}"
+            - name: "api.mftransactions.port"
+              value: "{{ .Values.mftransactions.mf_http_port_ext }}"
+            - name: "api.mfmarketdata.host"
+              value: "{{ .Values.mfmarketdata.mf_name }}"
+            - name: "api.mfmarketdata.port"
+              value: "{{ .Values.mfmarketdata.mf_http_port_ext }}"
+            - name: "api.mfvaluation.host"
+              value: "{{ .Values.mfvaluation.mf_name }}"
+            - name: "api.mfvaluation.port"
+              value: "{{ .Values.mfvaluation.mf_http_port_ext }}"
