fix composite service config

--- a/helm-chart/templates/composite_deployment.yaml
+++ b/helm-chart/templates/composite_deployment.yaml
@@ -24,19 +24,19 @@ spec:
               value: "{{ .Values.mfrabbitmq.port_ext }}"
             - name: "server.port"
               value: "{{ .Values.mfcomposite.mf_http_port }}"
-            - name: "api.mfinstruments.host"
+            - name: "app.mfinstruments.host"
               value: "{{ .Values.mfinstruments.mf_name }}"
-            - name: "api.mfinstruments.port"
+            - name: "app.mfinstruments.port"
               value: "{{ .Values.mfinstruments.mf_http_port_ext }}"
-            - name: "api.mftransactions.host"
+            - name: "app.mftransactions.host"
               value: "{{ .Values.mftransactions.mf_name }}"
-            - name: "api.mftransactions.port"
+            - name: "app.mftransactions.port"
               value: "{{ .Values.mftransactions.mf_http_port_ext }}"
-            - name: "api.mfmarketdata.host"
+            - name: "app.mfmarketdata.host"
               value: "{{ .Values.mfmarketdata.mf_name }}"
-            - name: "api.mfmarketdata.port"
+            - name: "app.mfmarketdata.port"
               value: "{{ .Values.mfmarketdata.mf_http_port_ext }}"
-            - name: "api.mfvaluation.host"
+            - name: "app.mfvaluation.host"
               value: "{{ .Values.mfvaluation.mf_name }}"
-            - name: "api.mfvaluation.port"
+            - name: "app.mfvaluation.port"
               value: "{{ .Values.mfvaluation.mf_http_port_ext }}"
