--- a/helm-chart/values_base.yaml
+++ b/helm-chart/values_base.yaml
@@ -20,7 +20,7 @@ mfrabbitmq:
   adminserviename: mfrabbitmqadmin
 mfinstruments:
   mf_http_port: 7001
-  mf_name: mfinstruments
+  mf_name: 192.168.100.73
 mftransactions:
   mf_http_port: 7002
   mf_name: mftransactions
