--- a/helm-chart/templates/composite_deployment.yaml
+++ b/helm-chart/templates/composite_deployment.yaml
@@ -25,18 +25,18 @@ spec:
             - name: "server.port"
               value: "{{ .Values.mfcomposite.mf_http_port }}"
             - name: "app.mfinstruments.host"
-              value: "{{ .Values.mfinstruments.mf_name }}"
+              value: "{{ .Values.k8_ip }}"
             - name: "app.mfinstruments.port"
               value: "{{ .Values.mfinstruments.mf_http_port_ext }}"
             - name: "app.mftransactions.host"
-              value: "{{ .Values.mftransactions.mf_name }}"
+              value: "{{ .Values.k8_ip }}"
             - name: "app.mftransactions.port"
               value: "{{ .Values.mftransactions.mf_http_port_ext }}"
             - name: "app.mfmarketdata.host"
-              value: "{{ .Values.mfmarketdata.mf_name }}"
+              value: "{{ .Values.k8_ip }}"
             - name: "app.mfmarketdata.port"
               value: "{{ .Values.mfmarketdata.mf_http_port_ext }}"
             - name: "app.mfvaluation.host"
-              value: "{{ .Values.mfvaluation.mf_name }}"
+              value: "{{ .Values.k8_ip }}"
             - name: "app.mfvaluation.port"
               value: "{{ .Values.mfvaluation.mf_http_port_ext }}"
