[MYF-686]add job limit

--- a/helm-chart/templates/mfshell_importjob_deployment.yaml
+++ b/helm-chart/templates/mfshell_importjob_deployment.yaml
@@ -4,6 +4,8 @@ metadata:
   name: mfpriceimport
 spec:
   schedule: "{{ .Values.mfshell.priceimportschedule }}"
+  failedJobsHistoryLimit: 1
+  successfulJobsHistoryLimit: 1
   jobTemplate:
     spec:
       template:
