[MYF-686]add min deployment for dev

--- a/helm-chart/templates/mfshell_processjob_deployment.yaml
+++ b/helm-chart/templates/mfshell_processjob_deployment.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.deployment "full" }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -20,3 +21,4 @@ spec:
                   value: "processTransactions"
           restartPolicy: OnFailure
       backoffLimit: 4
+{{ end }}
