--- a/helm-chart/templates/mfinstrument_service.yaml
+++ b/helm-chart/templates/mfinstrument_service.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.deployment "full" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -11,3 +12,4 @@ spec:
       port: {{ .Values.mfinstruments.mf_http_port }}
       nodePort: {{ .Values.mfinstruments.mf_http_port_ext }}
   type: NodePort
+{{ end }}
