--- a/helm-chart/templates/mfshell_importjob_deployment.yaml
+++ b/helm-chart/templates/mfshell_importjob_deployment.yaml
@@ -1,3 +1,4 @@
+{{ if eq .Values.deployment "full" }}
 apiVersion: batch/v1
 kind: CronJob
 metadata:
@@ -21,3 +22,4 @@ spec:
                   value: "importMarketData"
           restartPolicy: OnFailure
       backoffLimit: 4
+{{ end }}
