--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -5,7 +5,7 @@ mfmongo:
 mfframework:
   imageversion: 0.23.0-alpha.318b72947c422183740254f41e050755b6ce929a
 mfinstruments:
-  imageversion: 0.22.0-alpha.eb46be022ebe92710ca9a456ebd0bf6f5bb712d2
+  imageversion: 0.22.09ce22fbb859ffe49ba1ccfc8ea827b32557cc83f
 mftransactions:
   imageversion: 0.22.0-alpha.e6a3040fb1ae5ac2fa756eb5844200265d7be476
 mfvaluation:
