--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -7,7 +7,7 @@ mfframework:
 mfinstruments:
   imageversion: 0.22.09ce22fbb859ffe49ba1ccfc8ea827b32557cc83f
 mftransactions:
-  imageversion: 0.22.0-alpha.e6a3040fb1ae5ac2fa756eb5844200265d7be476
+  imageversion: 0.22.05ef9a2cfe165bf6223a5d43d73c5156802cb97f5
 mfvaluation:
   imageversion: 0.22.0-alpha.95ca482af59e78f551c338de0a35f59ff6ddfa91
 mfmarketdata:
