--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -9,7 +9,7 @@ mfinstruments:
 mftransactions:
   imageversion: 0.22.05ef9a2cfe165bf6223a5d43d73c5156802cb97f5
 mfvaluation:
-  imageversion: 0.22.0-alpha.95ca482af59e78f551c338de0a35f59ff6ddfa91
+  imageversion: 0.22.085ddd599c5edccf8d9a7a65df68c8f784e7559e3
 mfmarketdata:
   imageversion: 0.22.0-alpha.52d5561054cca1f2163b69dd94c8783156875a62
 mfshell:
