--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -11,6 +11,6 @@ mftransactions:
 mfvaluation:
   imageversion: 0.22.085ddd599c5edccf8d9a7a65df68c8f784e7559e3
 mfmarketdata:
-  imageversion: 0.22.0-alpha.52d5561054cca1f2163b69dd94c8783156875a62
+  imageversion: 0.22.0e6286bc3548a60410817a1ab96f9615ca07a00de
 mfshell:
   imageversion: 0.22.0-alpha.4bbb2bcf25a6228656344c1b4dc7f3252ea21e59
