updated helm cart with Image Version '0.22.073c35565adbbeb93ca40fa3388c8b49d279d2427' for mfshell

--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -13,4 +13,4 @@ mfvaluation:
 mfmarketdata:
   imageversion: 0.22.0e6286bc3548a60410817a1ab96f9615ca07a00de
 mfshell:
-  imageversion: 0.22.0-alpha.4bbb2bcf25a6228656344c1b4dc7f3252ea21e59
+  imageversion: 0.22.073c35565adbbeb93ca40fa3388c8b49d279d2427
