--- a/helm-chart/env/values_prod.yaml
+++ b/helm-chart/env/values_prod.yaml
@@ -18,3 +18,15 @@ mfvaluation:
   mf_http_port_ext: 30047
 mfcomposite:
   mf_http_port_ext: 30049
+mfshell:
+  # ┌───────────── minute (0 - 59)
+  # │ ┌───────────── hour (0 - 23)
+  # │ │ ┌───────────── day of month (1 - 31)
+  # │ │ │ ┌───────────── month (1 - 12)
+  # │ │ │ │ ┌───────────── day of week (0 - 6) (Sunday to Saturday;
+  # │ │ │ │ │                                       7 is also Sunday on some systems)
+  # │ │ │ │ │
+  # │ │ │ │ │
+  # * * * * *  command to execute
+  priceimportschedule: "0 10 * * *"
+  processtransactionschedule: "5 10 * * *"
