--- a/helm-chart/env/values_test.yaml
+++ b/helm-chart/env/values_test.yaml
@@ -19,3 +19,15 @@ mfvaluation:
   mf_http_port_ext: 30037
 mfcomposite:
   mf_http_port_ext: 30039
+mfshell:
+    # ┌───────────── minute (0 - 59)
+    # │ ┌───────────── hour (0 - 23)
+    # │ │ ┌───────────── day of month (1 - 31)
+    # │ │ │ ┌───────────── month (1 - 12)
+    # │ │ │ │ ┌───────────── day of week (0 - 6) (Sunday to Saturday;
+    # │ │ │ │ │                                       7 is also Sunday on some systems)
+    # │ │ │ │ │
+    # │ │ │ │ │
+  # * * * * *  command to execute
+  priceimportschedule: "39 15 * * *"
+  processtransactionschedule: "40 15 * * *"
