--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -5,7 +5,7 @@ mfmongo:
 mfframework:
   imageversion: 0.23.0-alpha.318b72947c422183740254f41e050755b6ce929a
 mfinstruments:
-  imageversion: 0.22.09ce22fbb859ffe49ba1ccfc8ea827b32557cc83f
+  imageversion: 0.23.0-alpha.0c38617a94102587aa5303932c02cc3e67163fdd
 mftransactions:
   imageversion: 0.22.05ef9a2cfe165bf6223a5d43d73c5156802cb97f5
 mfvaluation:
