--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -7,7 +7,7 @@ mfframework:
 mfinstruments:
   imageversion: 0.23.0-alpha.0c38617a94102587aa5303932c02cc3e67163fdd
 mftransactions:
-  imageversion: 0.22.05ef9a2cfe165bf6223a5d43d73c5156802cb97f5
+  imageversion: 0.23.0-alpha.dacb9997b3e703f042a8f38f64d8f0386d739e6b
 mfvaluation:
   imageversion: 0.22.085ddd599c5edccf8d9a7a65df68c8f784e7559e3
 mfmarketdata:
