updated helm cart with Image Version '0.23.0-alpha.dfdc005cd01dafb36b58eee2040864cc2b02bb95' for mfshell

--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -13,4 +13,4 @@ mfvaluation:
 mfmarketdata:
   imageversion: 0.23.0-alpha.0138d302029541a549f07fd290795c20e0fcbbb7
 mfshell:
-  imageversion: 0.22.073c35565adbbeb93ca40fa3388c8b49d279d2427
+  imageversion: 0.23.0-alpha.dfdc005cd01dafb36b58eee2040864cc2b02bb95
