--- a/helm-chart/versions/versions_test.yaml
+++ b/helm-chart/versions/versions_test.yaml
@@ -14,3 +14,5 @@ mfmarketdata:
   imageversion: 0.23.0-alpha.0138d302029541a549f07fd290795c20e0fcbbb7
 mfshell:
   imageversion: 0.23.0-alpha.dfdc005cd01dafb36b58eee2040864cc2b02bb95
+mffrontend:
+  imageversion: 0
