--- a/helm-chart/versions/versions_prod.yaml
+++ b/helm-chart/versions/versions_prod.yaml
@@ -14,3 +14,5 @@ mfmarketdata:
   imageversion: 0.22.0e6286bc3548a60410817a1ab96f9615ca07a00de
 mfshell:
   imageversion: 0.22.073c35565adbbeb93ca40fa3388c8b49d279d2427
+mffrontend:
+  imageversion: 0
