--- a/helm-chart/templates/mffrontend_pv.yaml
+++ b/helm-chart/templates/mffrontend_pv.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.stage }}-{{ .Values.mfmffrontend.pvc }}
+  name: {{ .Values.stage }}-{{ .Values.mffrontend.pvc }}
 spec:
   storageClassName: {{ .Values.stage }}-mffrontendstorage
   accessModes:
     - ReadWriteOnce
   resources:
     requests:
-      storage: {{ .Values.mfmffrontend.configstoragesize }}
+      storage: {{ .Values.mffrontend.configstoragesize }}
 
 ---
 
@@ -21,7 +21,7 @@ spec:
   accessModes:
     - ReadWriteOnce
   capacity:
-    storage: {{ .Values.mfmffrontend.configstoragesize }}
+    storage: {{ .Values.mffrontend.configstoragesize }}
   hostPath:
     path: {{ .Values.pv.nasstorage }}/{{ .Values.stage }}_mffe_config
     type: Directory
