--- a/helm-chart/templates/mongo_pv.yaml
+++ b/helm-chart/templates/mongo_pv.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.stage }}-{{ .Values.mfmongo.pvc }}test
+  name: {{ .Values.stage }}-{{ .Values.mfmongo.pvc }}
 spec:
-  storageClassName: {{ .Values.stage }}-mfmongostoragetest
+  storageClassName: {{ .Values.stage }}-mfmongostorage
   accessModes:
     - ReadWriteOnce
   resources:
@@ -15,13 +15,13 @@ spec:
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Values.stage }}-localmongostoragetest
+  name: {{ .Values.stage }}-localmongostorage
 spec:
-  storageClassName: {{ .Values.stage }}-mfmongostoragetest
+  storageClassName: {{ .Values.stage }}-mfmongostorage
   accessModes:
     - ReadWriteOnce
   capacity:
     storage: {{ .Values.mfmongo.mongostoragesize }}
   hostPath:
-    path: {{ .Values.pv.localstorage }}/{{ .Values.stage }}test
+    path: {{ .Values.pv.localstorage }}/{{ .Values.stage }}
     type: Directory
