--- a/helm-chart/env/values_prod.yaml
+++ b/helm-chart/env/values_prod.yaml
@@ -3,23 +3,26 @@ deployment: full
 mfrabbitmq:
   user: user
   pw: vulkan
-  port_ext: 30041
-  adminport_ext: 30042
+  port_ext: 30221
+  adminport_ext: 30222
 mfmongo:
   db_pw: vulkan
-  db_port_ext: 30043
-mfinstruments:
-  mf_http_port_ext: 30044
-mftransactions:
-  mf_http_port_ext: 30045
-mfmarketdata:
-  mf_http_port_ext: 30046
-mfvaluation:
-  mf_http_port_ext: 30047
-mffrontend:
-  mf_http_port_ext: 30048
+  db_port_ext: 30223
+keycloak:
+  pw: vulkan
+  port_ext: 30224
 mfcomposite:
-  mf_http_port_ext: 30049
+  mf_http_port_ext: 30230
+mfinstruments:
+  mf_http_port_ext: 30231
+mftransactions:
+  mf_http_port_ext: 30232
+mfmarketdata:
+  mf_http_port_ext: 30233
+mfvaluation:
+  mf_http_port_ext: 30234
+mffrontend:
+  mf_http_port_ext: 30235
 mfshell:
   # ┌───────────── minute (0 - 59)
   # │ ┌───────────── hour (0 - 23)
