--- a/helm-chart/versions/versions_prod.yaml
+++ b/helm-chart/versions/versions_prod.yaml
@@ -2,6 +2,8 @@ mfrabbitmq:
   image: rabbitmq:3.10.5-management
 mfmongo:
   image: mongo:5.0
+keycloak:
+  image: quay.io/keycloak/keycloak:21.1.2
 mfframework:
   imageversion: 0.22.06b0e0cc1a07c4ce2758f80a29847dd2198d24171
 mfinstruments:
