--- a/helm-chart/templates/keycloak_deployment.yaml
+++ b/helm-chart/templates/keycloak_deployment.yaml
@@ -16,7 +16,7 @@ spec:
         - name: {{ .Values.keycloak.name }}
           image: "{{ .Values.keycloak.image }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          args: ["start-dev"]
+          args: ["start-dev --import-realm"]
           volumeMounts:
             - name: keycloakdata
               mountPath: /opt/keycloak/data/import
