update config for composite

--- a/helm-chart/templates/composite_deployment.yaml
+++ b/helm-chart/templates/composite_deployment.yaml
@@ -19,26 +19,22 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}      
           tty: true
           env:
+            - name: "server.host"
+              value: "{{ .Values.k8_ip }}"
+            - name: "server.port"
+              value: "{{ .Values.mfcomposite.mf_http_port }}"
             - name: "api.common.version"
               value: "{{ .Values.mfframework.imageversion }}"
             - name: "spring.rabbitmq.port"
               value: "{{ .Values.mfrabbitmq.port_ext }}"
-            - name: "server.port"
-              value: "{{ .Values.mfcomposite.mf_http_port }}"
-            - name: "app.mfinstruments.host"
-              value: "{{ .Values.k8_ip }}"
             - name: "app.mfinstruments.port"
               value: "{{ .Values.mfinstruments.mf_http_port_ext }}"
-            - name: "app.mftransactions.host"
-              value: "{{ .Values.k8_ip }}"
             - name: "app.mftransactions.port"
               value: "{{ .Values.mftransactions.mf_http_port_ext }}"
-            - name: "app.mfmarketdata.host"
-              value: "{{ .Values.k8_ip }}"
             - name: "app.mfmarketdata.port"
               value: "{{ .Values.mfmarketdata.mf_http_port_ext }}"
-            - name: "app.mfvaluation.host"
-              value: "{{ .Values.k8_ip }}"
             - name: "app.mfvaluation.port"
               value: "{{ .Values.mfvaluation.mf_http_port_ext }}"
+            - name: "openid.port"
+              value: "{{ .Values.keycloak.port_ext }}"
 {{ end }}
