update config for mfinstrument

--- a/helm-chart/templates/mfinstrument_deployment.yaml
+++ b/helm-chart/templates/mfinstrument_deployment.yaml
@@ -21,6 +21,8 @@ spec:
           env:
             - name: "server.host"
               value: "{{ .Values.k8_ip }}"
+            - name: "server.port"
+              value: "{{ .Values.mfinstruments.mf_http_port_ext }}"
             - name: "spring.data.mongodb.port"
               value: "{{ .Values.mfmongo.db_port_ext }}"
             - name: "api.common.version"
