--- a/helm-chart/values_base.yaml
+++ b/helm-chart/values_base.yaml
@@ -51,3 +51,11 @@ pv:
   nasstorage: /mnt/data/mf
 mfshell:
   name: mfshell
+minecraft:
+  name: minecraft
+  image: itzg/minecraft-server
+  pvc: minecraftpvc
+  http_port: 25565
+  http_port_ext: 25565
+  storagesize: 1Gi
+  storagepath: /mnt/data/minecraft
