--- a/helm-chart/templates/minecraft_service.yaml
+++ b/helm-chart/templates/minecraft_service.yaml
@@ -1,4 +1,4 @@
-{{ if eq .Values.minecraftdeployment "install" }}
+{{ if eq .Values.minecraftdeployment "true" }}
 apiVersion: v1
 kind: Service
 metadata:
@@ -12,4 +12,4 @@ spec:
       port: {{ .Values.minecraft.http_port }}
       nodePort: {{ .Values.minecraft.http_port_ext }}
   type: NodePort
-  {{ end }}
+{{ end }}
